# rqpy

./: .gitignore  Cargo.toml  README.md  test.py
rqpy/: __init__.py
src/: client.rs  lib.rs  macros.rs  response.rs
