[package]
name = "rqpy"
version = "0.1.0"
edition = "2018"
authors = ["wuyaoping"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rqpy"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.0.1"
pyo3 = { version = "0.14.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.14.0", features = ["tokio-runtime"] }
reqwest = { version = "0.11.4", features = ["multipart", "json", "cookies", "socks"] }
tokio = "1.10.0"
